# q-hs

./: q.cabal
app/: Main.hs
