cabal-version:      2.4
name:               q
version:            0.1.0.0
author:             Michael Lan
maintainer:         michaellan202@gmail.com

executable q
    main-is:          Main.hs
    ghc-options:      -threaded
    build-depends:    base ^>=4.14.3.0
                     ,brick
                     ,vty
                     ,vector
                     ,text
                     ,lens
                     ,aeson
                     ,req
                     ,process
                     ,mtl
                     ,transformers
    hs-source-dirs:   app
    default-language: Haskell2010
