cabal-version: 2.4
name:          q
version:       0.1.0.0
author:        Michael Lan
maintainer:    michaellan202@gmail.com

executable q
  main-is:          Main.hs
  ghc-options:      -threaded
  build-depends:
    , aeson         ^>=2.1.1
    , base          ^>=4.14.3.0
    , brick         ^>=1.5
    , lens          ^>=5.2
    , mtl           ^>=2.2.2
    , process       ^>=1.6.13
    , req           ^>=3.13.0
    , text          ^>=1.2.4
    , transformers  ^>=0.5.6
    , vector        ^>=0.13.0
    , vty           ^>=5.37

  hs-source-dirs:   app
  default-language: Haskell2010
